fix: remove redundant scrollbar

--- a/frontend/src/components/DebtTracker.css
+++ b/frontend/src/components/DebtTracker.css
@@ -1,7 +1,3 @@
-html {
-    overflow-y: scroll;
-}
-
 .table {
     table-layout: fixed;
 }
@@ -16,10 +12,14 @@ html,
 body,
 #root {
     width: 100% !important;
-    height: 100% !important;
     margin: 0 !important;
     padding: 0 !important;
     overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
+    min-height: 100vh;
 }
 
 .transition-all {
